# cartesi-advance-runner

./: Cargo.toml  Dockerfile  docker-bake.hcl
.github/workflows/: depot.yml  rustfmt.yml
src/: lib.rs  proofs.rs
src/merkle_tree/: complete.rs  pristine.rs  proof.rs
