[package]
name = "advance_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
cartesi-machine = { git = "https://github.com/cartesi/dave", rev = "63c6c25cb51a7ea7c7284001a881fd461ac7558b", features = ["build_uarch"] }
reflink = "0.1.3"
alloy-sol-types = "0.7.2"
alloy-primitives = "0.7.2"
hex = "0.4.3"
snafu = "0.8.5"
sha3 = "0.10.8"