[package]
name = "advance_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
cartesi-machine = { git = "https://github.com/cartesi/dave", rev = "4d3e8ade2e77b34096ad2d6356757b53102328af", features = ["download_uarch"] }
reflink = "0.1.3"
alloy-sol-types = "1.0.0"
alloy-primitives = "1.0.0"
hex = "0.4.3"
snafu = "0.8.5"
sha3 = "0.10.8"