[package]
name = "advance_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
cartesi-machine = { git = "https://github.com/zippiehq/dave", rev = "4e56e1c0be31791cea883812b041486fe5ad429f", features = ["download_uarch"] }
reflink = "0.1.3"
alloy-sol-types = "1.0.0"
alloy-primitives = "1.0.0"
hex = "0.4.3"
snafu = "0.8.5"
sha3 = "0.10.8"